@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2005-06-03 AP        Support for pgsql 8.1 pg_stat_activity
     <li>2005-06-03 AP        Support for pgsql 8.1 instrumentation
     <li>2005-06-01 AP        Support for Procedures aka functions with out parameters
     <li>2005-06-01 AP        Support for EDB8.0
